--- a/styles/media.css
+++ b/styles/media.css
@@ -61,8 +61,12 @@
     .experience-list {
       padding-left: 40px;
     }
+
+    .experience-list::before {
+      left: 10px;
+    }
     .experience-card::before {
-      left: -21px;
+      left: -40px;
       width: 14px;
       height: 14px;
     }
@@ -118,7 +122,7 @@
       padding-left: 30px;
     }
     .experience-card::before {
-      left: -28px;
+      left: -29px;
       width: 12px;
       height: 12px;
     }
